--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
         />
     </div>
 
-      <div class="wrap-input">
+      <!-- <div class="wrap-input">
         <div class="label-input">Password2</div>
         <input
         class="icon_eye"
@@ -73,9 +73,9 @@
           src="../image/hidden.png"
         />
         <p></p>
-    </div>
+    </div> -->
 
-     <div class="wrap-submit">
+     <div class="wrap-submit">    
         <a href="#" class="redirect">Forgot password?</a>
  
         <button style="cursor: pointer">Login</button>
