--- a/resetPassword.html
+++ b/resetPassword.html
@@ -24,6 +24,7 @@
     <div class="wrap--label">
       <div class="label">Reset Password?</div>
       <div class="sub-label">Your password has been changed successfully.</div>
+      <img src="../image/Tick.png" />
       <div class="register">
         <div class="box"></div>
         <button style="cursor: pointer">Ok</button>
