--- a/register-Fake.html
+++ b/register-Fake.html
@@ -48,6 +48,7 @@
             <input
               id="email"
               type="text"
+              name="email"
               placeholder="Enter email address"
               autocomplete="off"
             />
@@ -59,12 +60,14 @@
             <input
               style="position: relative; z-index: 1"
               type="password"
+              name="password"
               id="password"
               placeholder="Enter your password"
               autocomplete="off"
             />
-            <small></small>
+
             <img class="icon_eye" src="../image/hidden.png" />
+            <small></small>
           </div>
 
           <div class="wrap-input">
@@ -72,11 +75,14 @@
             <input
               style="position: relative; z-index: 1"
               type="password"
-              id="confirmPassword"
+              name="confirmpassword"
+              id="confirmpassword"
               placeholder="Retype password"
+              autocomplete="off"
             />
-            <small></small>
+
             <img class="icon_eye" src="../image/hidden.png" />
+            <small></small>
           </div>
         </div>
 
