fix: show error

--- a/register-Fake.html
+++ b/register-Fake.html
@@ -52,7 +52,7 @@
               placeholder="Enter email address"
               autocomplete="off"
             />
-            <!-- <div class="error-input" id="errEmail"></div> -->
+            <small></small>
           </div>
 
           <div class="wrap-input">
